# lp_utils

./: .gitignore  README.md  pyproject.toml
src/lp_utils/: __init__.py  catalogs.py  cosmology.py  utils.py
src/lp_utils/config/: istf_cosmology.json  params_rectangle_angles.json  raygal_cosmology.json  wmap1_cosmology.json  wmap3_cosmology.json  wmap5_cosmology.json  wmap7_cosmology.json  wmap9_cosmology.json
